# kutie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.ps1  test.ps1  vcpkg.json
.githooks/: commit-msg
cmake/: KutieConfig.cmake.in  KutieEmbedAssets.cmake  KutieStaticLinking.cmake  KutieWindows.cmake
docs/: api-reference.md  architecture.md  architecture.zh.md  asset-bundling.md  custom-titlebar.md  custom-titlebar.zh.md  ipc-protocol.md  ipc-protocol.zh.md  packaging.md  packaging.zh.md  roadmap.md  windows-backend.md  windows-backend.zh.md
docs/features/: browser-window.md  browser-window.zh.md
include/kutie/: asset_bundle.hpp  browser_window.hpp  ipc_hub.hpp  platform_services.hpp  runtime.hpp  shell.hpp  types.hpp
include/kutie/platform/: shell_factory.hpp
ports/kutie/: portfile.cmake  vcpkg.json
sample/: CMakeLists.txt
sample/frontend/: child-window.html  dialog.html  index.html  standalone-window.html
sample/frontend/scripts/: app.js  titlebar.js
sample/frontend/styles/: main.css
sample/src/: main.cpp
src/: CMakeLists.txt  asset_bundle.cpp  browser_window.cpp  ipc_hub.cpp  platform_services.cpp  runtime.cpp
src/platform/: shell_factory.cpp
src/platform/windows/: win_browser_window.cpp  win_browser_window.hpp  win_dialog.cpp  win_dpi.cpp  win_dpi.hpp  win_frameless.cpp  win_frameless.hpp  win_path_util.cpp  win_path_util.hpp  win_shell.cpp  win_shell.hpp  win_string_util.cpp  win_string_util.hpp  win_webview_host.cpp  win_webview_host.hpp
tests/: CMakeLists.txt  smoke_browser_window.cpp  smoke_frameless.cpp  test_util.hpp
tools/: embed_assets.py
tools/smoke/: _ui_helpers.ps1  custom-titlebar.ps1  multi-window.ps1
